pagina de compra agregada

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="#divserorador">Conviértete en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="comprartick" href="#">Comprar tickets</a>
+                            <a class="nav-link" id="comprartick" href="tickets.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                 <button type="button" href="#divserorador" class="btn btn-outline-secondary btn-lg btn-right d-inline" id="serorador">
                     Quiero ser orador
                 </button>
-                <button type="button" class="btn btn-success btn-lg btn-right d-inline">
+                <button type="button" href= "tickets.html" class="btn btn-success btn-lg btn-right d-inline">
                     Comprar tickets
                 </button>
             </div>
